feat: Implement Account Overview Repository for user download history and dashboard counts
- Added AccountOverviewRepository to handle user download history and dashboard counts.
- Introduced methods for fetching download history, download count, and bundle counts.
- Updated AdminBootstrap to use password encoding for admin account creation.
- Enhanced IdentityTokenEntity and JpaIdentityTokenStore to support optimistic locking.
- Created JpaOauthIdentityStore and OauthIdentityEntity for OAuth identity management.
- Implemented AccountAuthentication and AccountAuthenticator for user and admin authentication.
- Developed AccountSessionService to manage session invalidation.
- Added GoogleOAuthSuccessHandler and GoogleOAuthFailureHandler for OAuth login handling.
- Introduced PasswordPolicy for password validation during registration and reset.
- Updated SecurityConfig to support OAuth2 login and session management.
- Enhanced OutboxDispatcher and OutboxEventEntity to sanitize payloads after publishing.
- Created OutboxPayloadSanitizer to remove sensitive information from outbox messages.